--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,7 +317,7 @@ install(
 )
 
 install(
-	FILES README AUTHORS LICENSE FONT.LICENSE CHANGELOG
+	FILES README.md AUTHORS.md LICENSE.md FONT.LICENSE.md CHANGELOG.md
 	DESTINATION "${SHARE_PATH}"
 )
 
